Fixed bug #42722 (display_errors setting ignored for E_PARSE and HTTP 500 page)